5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4148/executions/1800_2572.log
== TEST (2019-06-11 11:51:09) 
-- CODE:
from numpy import*

j = array(eval(input('')))

g2 = zeros(2, dtype=int)

for i in range(j):
	if j[i]%2!=0:
		g2[0] = j[i]
		
print(g2)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:56:15) 
-- CODE:
from numpy import*

j = array(eval(input('')))

g2 = zeros(2, dtype=int)

for i in range(j):
	if j[i]%2!=0:
		g2[0] = j[i]
		
print(g2)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:56:54) 
-- CODE:
from numpy import*

j = array(eval(input('')))

g2 = zeros(2, dtype=int)

for i in range(size(j):
	if j[i]%2!=0:
		g2[0] = j[i]
		
print(g2)
		
		
-- ERROR:
File "XXXX", line 7
    for i in range(size(j):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 11:56:59) 
-- CODE:
from numpy import*

j = array(eval(input('')))

g2 = zeros(2, dtype=int)

for i in range(size(j)):
	if j[i]%2!=0:
		g2[0] = j[i]
		
print(g2)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:42:19) 
-- CODE:
from numpy import*

j = array(eval(input('')))

b 
g = zeros(2, dtype=int)

for i in range(size(j)):
	if j[i]%2!=0:
		b+=1
x=0
g=0
		
for n in j:
	if (r%2 !=0):
		p[x]=j[g]
		x+=1
	g+=1
print(p)



print(g2)
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 20:42:26) 
-- CODE:
from numpy import*

j = array(eval(input('')))

b 
g = zeros(2, dtype=int)

for i in range(size(j)):
	if j[i]%2!=0:
		b+=1
x=0
g=0
		
for n in j:
	if (r%2 !=0):
		p[x]=j[g]
		x+=1
	g+=1
print(p)



print(g2)
		
		
-- EXECUTION TIME:
1.31726
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2572/main.py", line 5, in <module>
    b 
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 20:43:34) 
-- CODE:
from numpy import*

j = array(eval(input('')))

b 
g = zeros(2, dtype=int)

for i in range(size(j)):
	if j[i]%2!=0:
		b+=1
x=0
c=0
		
for n in j:
	if (r%2 !=0):
		g[x]=j[c]
		x+=1
	g+=1
print(p)



print(g2)
		
		
-- EXECUTION TIME:
1.30139
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2572/main.py", line 5, in <module>
    b 
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 20:43:45) 
-- CODE:
from numpy import*

j = array(eval(input('')))

b 
g = zeros(2, dtype=int)

for i in range(size(j)):
	if j[i]%2!=0:
		b+=1
x=0
c=0
		
for n in j:
	if (r%2 !=0):
		g[x]=j[c]
		x+=1
	g+=1
print(p)



		
-- EXECUTION TIME:
0.942727
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2572/main.py", line 5, in <module>
    b 
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 20:44:03) 
-- CODE:
from numpy import*

j = array(eval(input('')))

b 
g = zeros(2, dtype=int)

for i in range(size(j)):
	if j[i]%2!=0:
		b+=1
x=0
c=0
		
for n in j:
	if (n%2 !=0):
		g[x]=j[c]
		x+=1
	g+=1
print(p)



		
-- EXECUTION TIME:
1.11518
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1800/2572/main.py", line 5, in <module>
    b 
NameError: name 'b' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:44:13) 
-- CODE:
from numpy import*

j = array(eval(input('')))

b=0
g = zeros(2, dtype=int)

for i in range(size(j)):
	if j[i]%2!=0:
		b+=1
x=0
c=0
		
for n in j:
	if (n%2 !=0):
		g[x]=j[c]
		x+=1
	g+=1
print(p)



		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 20:44:41) 
-- CODE:
from numpy import*

j = array(eval(input('')))

b=0
g = zeros(2, dtype=int)

for i in range(size(j)):
	if j[i]%2!=0:
		b+=1
x=0
c=0
		
for n in j:
	if (n%2 !=0):
		g[x]=j[c]
		x+=1
	g+=1
print(g)



		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 20:44:50) 
-- CODE:
from numpy import*

j = array(eval(input('')))

b=0
g = zeros(2, dtype=int)

for i in range(size(j)):
	if j[i]%2!=0:
		b+=1
x=0
c=0
		
for n in j:
	if (n%2 !=0):
		g[x]=j[c]
		x+=1
	g+=1
print(g)



		
-- EXECUTION TIME:
0.931695
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247566 75247563]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:

-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874906        3]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 20:54:21) 
-- CODE:
from numpy import*

j = array(eval(input('')))

b=0

for i in range(size(j)):
	if j[i]%2!=0:
		b+=1
x=0
c=0
g = zeros(2, dtype=int)		
for n in j:
	if (n%2 !=0):
		g[x]=j[c]
		x+=1
	g+=1
print(g)



		
-- EXECUTION TIME:
1.21177
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247566 75247563]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:

-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874906        3]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 20:55:34) 
-- CODE:
from numpy import*

j = array(eval(input('')))

b=0

for i in range(size(j)):
	if j[i]%2!=0:
		b+=1
x=0
c=0
g = zeros(2, dtype=int)		
for n in j:
	if (n%2 !=0):
		g[x]=j[c]
		x+=1
	c+=1
print(g)



		
-- EXECUTION TIME:
1.25427
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:

-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903        0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 20:57:57) 
-- CODE:
from numpy import*

j = array(eval(input('')))

b=0

for i in j:
	if i%2!=0:
		b+=1
		
p = zeros(b, dtype=int)			
x=0
g=0
	

for n in j:
	if (n%2 !=0):
		p[x]=j[g]
		x+=1
	g+=1
print(g)



		
-- EXECUTION TIME:
1.20361
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
5
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
8
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 21:06:18) 
-- CODE:
from numpy import*

j = array(eval(input('')))
b=0

for i in j:
	if(i%2!0):
	  	b= b + 1
p = zeros(b, dtype=int)
x=0
g=0

for t in j:
	if(t%2!=0):
		p[x]=j[g]
		x = x + 1
	g = g + 1
print(p)



		
-- EXECUTION TIME:
0.856438
-- ERROR:
  File "/home/codebench/codes/1800/2572/main.py", line 7
    if(i%2!0):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 21:06:55) 
-- CODE:
from numpy import*

j = array(eval(input('')))
b=0

for i in j:
	if(i%2!=0):
	  	b= b + 1
p = zeros(b, dtype=int)
x=0
g=0

for t in j:
	if(t%2!=0):
		p[x]=j[g]
		x = x + 1
	g = g + 1
print(p)



		
-- EXECUTION TIME:
1.14107
-- TEST CASE 1:
---- input:
[75247561,76546316,75713658,97135671,70356874]
---- correct output:
[75247561 97135671]
---- user output:
[75247561 97135671]
-- TEST CASE 2:
---- input:
[13017594,57417542,85024758,12475981,75942785,91875987,29584192,85794217]
---- correct output:
[12475981 75942785 91875987 85794217]
---- user output:
[12475981 75942785 91875987 85794217]
-- TEST CASE 3:
---- input:
[31874903,74902746,23742046]
---- correct output:
[31874903]
---- user output:
[31874903]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
